--- a/SKillsChecks/shelfie/src/App.css
+++ b/SKillsChecks/shelfie/src/App.css
@@ -31,3 +31,21 @@
     transform: rotate(360deg);
   }
 }
+.container {
+  width: 80%;
+  height: 200px;
+  background: aqua;
+  margin: auto;
+  padding: 10px;
+}
+.one {
+  width: 15%;
+  height: 200px;
+  background: red;
+  float: left;
+}
+.two {
+  margin-left: 15%;
+  height: 200px;
+  background: black;
+}
